Fixed footer and content box spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,7 @@ body {
     display:inline-block;
     width: 100%;
     height:auto;
-    position:relative;
+    position:relative;;
     overflow: hidden;
     background-color: #888;
     border-bottom-left-radius: 12%;
@@ -56,6 +56,7 @@ nav > #links > .link > a {
         display: block;
         text-align: center;
         margin-bottom: 5px;
+        width:100%;
     }
 
     nav > #links > .link {
@@ -71,17 +72,19 @@ nav > #links > .link > a {
 }
 
 #content-holder {
-    margin: 10%;
-    width: 80%;
+    margin: 5%;
+    width: 90%;
     height: audo;
 }
 
-#foot {
-    width:100%;
-    border-radius: 10% 10% 0 0;
+#footer {
+    position:fixed;
+    bottom:0;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
     background-color: #888;
-    position: fixed;
-    height: 10%;
+    width:90%;
+    padding: 3% 5% 2% 5%;
 }
 
 .content {
@@ -89,4 +92,6 @@ nav > #links > .link > a {
     background-color: #AAA;
     box-shadow: 2px 2px 1px #666;
     text-decoration: none;
+    margin-bottom: 5%;
+    padding:2%;
 }
